@@ -29,6 +29,7 @@
 			ed.addButton('fullpage', {title : 'fullpage.desc', cmd : 'mceFullPageProperties'});
 
 			ed.onBeforeSetContent.add(t._setContent, t);
+			ed.onSetContent.add(t._setBodyAttribs, t);
 			ed.onGetContent.add(t._getContent, t);
 		},
 
@@ -43,6 +44,31 @@
 		},
 
 		// Private plugin internal methods
+
+		_setBodyAttribs : function(ed, o) {
+			var bdattr, i, len, kv, k, v, t, attr = this.head.match(/body(.*?)>/i);
+
+			if (attr && attr[1]) {
+				bdattr = attr[1].match(/\s*(\w+\s*=\s*".*?"|\w+\s*=\s*'.*?'|\w+\s*=\s*\w+|\w+)\s*/g);
+
+				for(i = 0, len = bdattr.length; i < len; i++) {
+					kv = bdattr[i].split('=');
+					k = kv[0].replace(/\s/,'');
+					v = kv[1];
+
+					if (v) {
+						v = v.replace(/^\s+/,'').replace(/\s+$/,'');
+						t = v.match(/^["'](.*)["']$/);
+
+						if (t)
+							v = t[1];
+					} else
+						v = k;
+
+					ed.dom.setAttrib(ed.getBody(), 'style', v);
+				}
+			}
+		},
 
 		_createSerializer : function() {
 			return new tinymce.dom.Serializer({
